@@ -91,6 +91,7 @@ namespace Marvel {
 
 		[[nodiscard]] bool isPlotQueried() const;
 		float* getPlotQueryArea();
+		mvRef<mvDrawList> getDrawList() { return m_drawList; }
 		
 		ImPlotFlags        getFlags         () const { return m_flags; }
 		ImPlotAxisFlags    getXFlags        () const { return m_xflags; }
@@ -116,7 +117,8 @@ namespace Marvel {
 
 	private:
 
-		// new
+		mvRef<mvDrawList>             m_drawList;
+		
 		std::string                   m_xaxisName;
 		std::string                   m_yaxisName;
 		ImPlotFlags                   m_flags    = 0;
